# fish-manpage-completions

./: .gitignore  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  MakeFile  README.md
.github/: dependabot.yml
.github/workflows/: main.yml  rust.yml
examples/: chroot.1  chroot.fish  tr.fish
fixtures/: docker-rmi.1  docker-rmi.1.deroffed  docker-rmi.fish  find.1  find.1.deroffed  mlterm.1.deroffed  mlterm.fish  qelectrotech.1  qelectrotech.1.deroffed  qelectrotech.fish
src/: deroff.rs  deroff2.rs  main.rs  util.rs
