[package]
name = "fish-manpage-completions"
version = "0.1.0"
authors = ["Scott Steele <scottlsteele@gmail.com>"]
edition = "2021"

[dependencies]
structopt = "0.3.21"
itertools = "0.10"
regex = "1.5.5"
lazy_static = "1.4.0"
bstr = "0.2.17"
flate2 = "1.0.25"
bzip2 = "0.4.4"
xz2 = "0.1.6"
dirs = "4"
tracing = "0.1.37"
tracing-subscriber = "0.3"
indicatif = { version = "0.17.3", features = ["rayon"] }
rayon = "1.6.1"

[dev-dependencies]
pretty_assertions = "1"
