[package]
name = "fish-manpage-completions"
version = "0.1.0"
authors = ["Scott Steele <scottlsteele@gmail.com>"]
edition = "2021"

[dependencies]
structopt = "0.3.26"
itertools = "0.10"
regex = "1.7.3"
lazy_static = "1.4.0"
bstr = "1.4.0"
flate2 = "1.0.25"
bzip2 = "0.4.4"
xz2 = "0.1.7"
dirs = "5"
tracing = "0.1.37"
tracing-subscriber = "0.3"
indicatif = { version = "0.17.3", features = ["rayon"] }
rayon = "1.7.0"
clap = { version = "4.1.14", features = ["derive"] }
clap_complete = "4.3.0"

[dev-dependencies]
pretty_assertions = "1"
